Fix logo on mobile

--- a/src/styles/sections/welcome/partials/_navbar.scss
+++ b/src/styles/sections/welcome/partials/_navbar.scss
@@ -60,7 +60,7 @@ $page-navigation-logo-margin-left: 30px;
         .logo {
             width: 30%;
             height: auto;
-            padding-bottom: 100%;
+            padding-bottom: 30%;
             margin-left: 0;
         }
     }
